dashboard/oauth/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-auth-oauth2
  namespace: kubernetes-dashboard
  labels:
    use-http01-solver: "true"
    #use-cloudflare-solver: "true"
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/configuration-snippet: |-
      proxy_ssl_server_name on;
      proxy_ssl_name $host;

    # Issuer
    cert-manager.io/cluster-issuer: "letsencrypt-prod" # The name of the LetsEncrypt HTTP01 ClusterIssuer
    #cert-manager.io/cluster-issuer: "cloudflare-prod" # The name of the Cloudflare DNS01 ClusterIssuer
    cme.cert-manager.io/http01-edit-in-place: "true" # This annotation prevents the creation of a separate ingress for the ACME challenge. Instead, the current Ingress is extended by the ACME Challenge path.

    # SSL
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

    # OAuth Proxy
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
spec:
  rules:
    - host: <host>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 443
  tls:
    - hosts:
        - <host>
      secretName: <tlsname>

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy
  namespace: kubernetes-dashboard
  labels:
    use-http01-solver: "true"
    #use-cloudflare-solver: "true"
  annotations:
    kubernetes.io/ingress.class: "nginx"

    # Issuer
    cert-manager.io/cluster-issuer: "letsencrypt-prod" # The name of the LetsEncrypt HTTP01 ClusterIssuer
    #cert-manager.io/cluster-issuer: "cloudflare-prod" # The name of the Cloudflare DNS01 ClusterIssuer
    cme.cert-manager.io/http01-edit-in-place: "true" # This annotation prevents the creation of a separate ingress for the ACME challenge. Instead, the current Ingress is extended by the ACME Challenge path.

    # SSL
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts:
        - <host>
      secretName: <tlsname>
  rules:
    - host: <host>
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 4180
